tests/build/cases/widget/when_property_assign_special_not_allowed.stderr
error: unexpected `foo!` in property value
 --> $DIR/when_property_assign_special_not_allowed.rs:9:22
  |
9 |             margin = foo!;
  |                      ^^^
